# my-openenv

./: .gitignore  Dockerfile  README.md  app.py  client.py  email_triage_env.py  inference.py  models.py  openenv.yaml  push.sh  pyproject.toml  requirements.txt  server.py  start.sh  validate.sh
.github/workflows/: sync_to_hf.yml
server/: __init__.py  app.py  environment.py
